workspace/compiler/tests/snapshots/test_snap_rust__rust_widget_render_w100.snap
---
source: workspace/compiler/tests/snap_rust.rs
assertion_line: 398
expression: rendered
---
pub struct Widget<T> {
    inner: T,
}
