workspace/compiler/tests/snapshots/test_snap_rust__rust_widget_render_w40.snap
---
source: workspace/compiler/tests/snap_rust.rs
expression: rendered
---
pub struct Widget<T> {
    pub(crate) inner: T,
}
