workspace/compiler/tests/snapshots/test_snap_rust__rust_workspace_ir.snap
---
source: workspace/compiler/tests/snap_rust.rs
assertion_line: 343
expression: stubs
---
{
    "odd_duck": EntryStub {
        kind: "module",
        name: "odd_duck",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "odd_duck::<impl Behavior for Mode>": EntryStub {
        kind: "trait_impl",
        name: "<impl Behavior for Mode>",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "odd_duck::Behavior": EntryStub {
        kind: "trait_def",
        name: "Behavior",
        visibility: "pub",
        sealed: Some(
            Some(
                false,
            ),
        ),
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "odd_duck::Behavior::describe": EntryStub {
        kind: "function",
        name: "describe",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "odd_duck::Mode": EntryStub {
        kind: "sum_type",
        name: "Mode",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: None,
    },
    "odd_duck::Mode::describe": EntryStub {
        kind: "function",
        name: "describe",
        visibility: "priv",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "odd_duck::Widget": EntryStub {
        kind: "record",
        name: "Widget",
        visibility: "pub",
        sealed: None,
        method_count: Some(
            2,
        ),
        protocols: Some(
            [],
        ),
        deprecation: None,
    },
    "odd_duck::Widget::echo": EntryStub {
        kind: "function",
        name: "echo",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
    "odd_duck::Widget::new": EntryStub {
        kind: "function",
        name: "new",
        visibility: "pub",
        sealed: None,
        method_count: None,
        protocols: None,
        deprecation: Some(
            (
                None,
                None,
            ),
        ),
    },
}
